// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Radio checked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c1 + .c4 {
  margin-left: 0.5em;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:disabled) ~ .c1,
.c0 > input:focus:not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

<label
  checked=""
  class="c0"
  for="demo-blah"
>
  <input
    aria-checked="true"
    checked=""
    id="demo-blah"
    name="demo"
    type="radio"
    value="blah"
  />
  <span
    aria-hidden="true"
    class="c1 c2"
  />
  <span
    class="c3 c4"
  />
</label>
`;

exports[`Snapshots Radio disabled 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c1 + .c4 {
  margin-left: 0.5em;
}

.c5:hover .c1,
.c5 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c5:hover > input:not(:checked):not(:disabled) ~ .c1,
.c5:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c5:active > input:not(:disabled) ~ .c1,
.c5 > input:focus:not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c5 > input:disabled ~ .c1,
.c5 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c5 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c0 {
  display: inline-block;
  cursor: pointer;
  cursor: not-allowed;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:disabled) ~ .c1,
.c0 > input:focus:not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c0:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
  disabled=""
  for="demo-blah"
>
  <input
    aria-checked="false"
    disabled=""
    id="demo-blah"
    name="demo"
    type="radio"
    value="blah"
  />
  <span
    aria-hidden="true"
    class="c1 c2"
  />
  <span
    class="c3 c4"
  />
</label>
`;

exports[`Snapshots Radio group disabled 1`] = `
.c5 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  border-radius: 50%;
  vertical-align: middle;
}

.c7 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c4 + .c7 {
  margin-left: 0.5em;
}

.c8:hover .c4,
.c8 > input:focus ~ .c4 {
  border: 1px solid #B4B4B4;
}

.c8:hover > input:not(:checked):not(:disabled) ~ .c4,
.c8:active > input:not(:checked):not(:disabled) ~ .c4 {
  border: 1px solid #303030;
}

.c8:active > input:not(:disabled) ~ .c4,
.c8 > input:focus:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c8 > input:disabled ~ .c4,
.c8 > input:disabled ~ .c6 {
  opacity: 0.5;
}

.c8 > input:checked ~ .c4:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c2 {
  display: inline-block;
  cursor: pointer;
  cursor: not-allowed;
}

.c2 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c2 span {
  vertical-align: middle;
}

.c2:hover .c4,
.c2 > input:focus ~ .c4 {
  border: 1px solid #B4B4B4;
}

.c2:hover > input:not(:checked):not(:disabled) ~ .c4,
.c2:active > input:not(:checked):not(:disabled) ~ .c4 {
  border: 1px solid #303030;
}

.c2:active > input:not(:disabled) ~ .c4,
.c2 > input:focus:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c2 > input:disabled ~ .c4,
.c2 > input:disabled ~ .c6 {
  opacity: 0.5;
}

.c2 > input:checked ~ .c4:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c2:hover .c4 {
  box-shadow: none;
}

.c1 {
  margin-right: -0.5em;
  margin-left: -0.5em;
}

.c0 .c3 {
  margin-right: 0.5em;
  margin-left: 0.5em;
}

<div
  aria-labelledby="demo"
  class="c0 c1"
>
  <label
    checked=""
    class="c2 c3"
    disabled=""
    for="demo-1"
  >
    <input
      aria-checked="true"
      checked=""
      disabled=""
      id="demo-1"
      name="demo"
      type="radio"
      value="1"
    />
    <span
      aria-hidden="true"
      class="c4 c5"
    />
    <span
      class="c6 c7"
    />
  </label>
  <label
    class="c2 c3"
    disabled=""
    for="demo-2"
  >
    <input
      aria-checked="false"
      disabled=""
      id="demo-2"
      name="demo"
      type="radio"
      value="2"
    />
    <span
      aria-hidden="true"
      class="c4 c5"
    />
    <span
      class="c6 c7"
    />
  </label>
  <label
    class="c2 c3"
    disabled=""
    for="demo-3"
  >
    <input
      aria-checked="false"
      disabled=""
      id="demo-3"
      name="demo"
      type="radio"
      value="3"
    />
    <span
      aria-hidden="true"
      class="c4 c5"
    />
    <span
      class="c6 c7"
    />
  </label>
</div>
`;

exports[`Snapshots Radio group with child disabled 1`] = `
.c5 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  border-radius: 50%;
  vertical-align: middle;
}

.c7 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c4 + .c7 {
  margin-left: 0.5em;
}

.c2 {
  display: inline-block;
  cursor: pointer;
}

.c2 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c2 span {
  vertical-align: middle;
}

.c2:hover .c4,
.c2 > input:focus ~ .c4 {
  border: 1px solid #B4B4B4;
}

.c2:hover > input:not(:checked):not(:disabled) ~ .c4,
.c2:active > input:not(:checked):not(:disabled) ~ .c4 {
  border: 1px solid #303030;
}

.c2:active > input:not(:disabled) ~ .c4,
.c2 > input:focus:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c2 > input:disabled ~ .c4,
.c2 > input:disabled ~ .c6 {
  opacity: 0.5;
}

.c2 > input:checked ~ .c4:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c8 {
  display: inline-block;
  cursor: pointer;
  cursor: not-allowed;
}

.c8 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c8 span {
  vertical-align: middle;
}

.c8:hover .c4,
.c8 > input:focus ~ .c4 {
  border: 1px solid #B4B4B4;
}

.c8:hover > input:not(:checked):not(:disabled) ~ .c4,
.c8:active > input:not(:checked):not(:disabled) ~ .c4 {
  border: 1px solid #303030;
}

.c8:active > input:not(:disabled) ~ .c4,
.c8 > input:focus:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c8 > input:disabled ~ .c4,
.c8 > input:disabled ~ .c6 {
  opacity: 0.5;
}

.c8 > input:checked ~ .c4:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c8:hover .c4 {
  box-shadow: none;
}

.c1 {
  margin-right: -0.5em;
  margin-left: -0.5em;
}

.c0 .c3 {
  margin-right: 0.5em;
  margin-left: 0.5em;
}

<div
  aria-labelledby="demo"
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="demo-1"
  >
    <input
      aria-checked="false"
      id="demo-1"
      name="demo"
      type="radio"
      value="1"
    />
    <span
      aria-hidden="true"
      class="c4 c5"
    />
    <span
      class="c6 c7"
    />
  </label>
  <label
    class="c8 c3"
    disabled=""
    for="demo-2"
  >
    <input
      aria-checked="false"
      disabled=""
      id="demo-2"
      name="demo"
      type="radio"
      value="2"
    />
    <span
      aria-hidden="true"
      class="c4 c5"
    />
    <span
      class="c6 c7"
    />
  </label>
  <label
    checked=""
    class="c2 c3"
    for="demo-3"
  >
    <input
      aria-checked="true"
      checked=""
      id="demo-3"
      name="demo"
      type="radio"
      value="3"
    />
    <span
      aria-hidden="true"
      class="c4 c5"
    />
    <span
      class="c6 c7"
    />
  </label>
</div>
`;

exports[`Snapshots Radio unchecked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c1 + .c4 {
  margin-left: 0.5em;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:disabled) ~ .c1,
.c0 > input:focus:not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

<label
  class="c0"
  for="demo-blah"
>
  <input
    aria-checked="false"
    id="demo-blah"
    name="demo"
    type="radio"
    value="blah"
  />
  <span
    aria-hidden="true"
    class="c1 c2"
  />
  <span
    class="c3 c4"
  />
</label>
`;

exports[`Snapshots Render children 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c1 + .c4 {
  margin-left: 0.5em;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:disabled) ~ .c1,
.c0 > input:focus:not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c5:hover .c1,
.c5 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c5:hover > input:not(:checked):not(:disabled) ~ .c1,
.c5:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c5:active > input:not(:disabled) ~ .c1,
.c5 > input:focus:not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c5 > input:disabled ~ .c1,
.c5 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c5 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c5:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
  for="demo-blah"
>
  <input
    aria-checked="false"
    id="demo-blah"
    name="demo"
    type="radio"
    value="blah"
  />
  <span
    aria-hidden="true"
    class="c1 c2"
  />
  <span
    class="c3 c4"
  >
    Hello
  </span>
</label>
`;
